chore:  bump version

--- a/apps/tailwindcss-weapp/package.json
+++ b/apps/tailwindcss-weapp/package.json
@@ -67,6 +67,7 @@
     "@dcloudio/uni-mp-lark": "3.0.0-4080720251210001",
     "@dcloudio/uni-mp-qq": "3.0.0-4080720251210001",
     "@dcloudio/uni-mp-toutiao": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-vue": "3.0.0-4080720251210001",
     "@dcloudio/uni-mp-weixin": "3.0.0-4080720251210001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4080720251210001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4080720251210001",
@@ -98,7 +99,7 @@
     "miniprogram-api-typings": "^4.0.5",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "redent": "^4.0.0",
     "strip-indent": "^4.1.1",
     "tailwindcss": "^3.4.18",
