--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.26.2",
+  "packageManager": "pnpm@10.27.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
@@ -123,6 +123,7 @@
     "@csstools/css-tokenizer": "^3.0.4",
     "@csstools/postcss-is-pseudo-class": "^5.0.3",
     "@eslint/config-inspector": "^1.4.2",
+    "@icebreakers/changelog-github": "^0.1.0",
     "@icebreakers/commitlint-config": "^1.2.3",
     "@icebreakers/eslint-config": "^1.6.10",
     "@icebreakers/monorepo": "^3.1.15",
@@ -219,7 +220,7 @@
     "normalize-newline": "^5.0.0",
     "npm-registry-fetch": "^19.1.1",
     "only-allow": "^1.2.2",
-    "oxc-parser": "^0.105.0",
+    "oxc-parser": "^0.106.0",
     "pathe": "^2.0.3",
     "picocolors": "^1.1.1",
     "pkg-types": "^2.3.0",
@@ -246,7 +247,7 @@
     "traverse": "^0.6.11",
     "ts-morph": "^27.0.2",
     "tsd": "^0.33.0",
-    "tsdown": "0.18.3",
+    "tsdown": "0.18.4",
     "tslib": "^2.8.1",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
