--- a/apps/vite-native-ts-skyline/package.json
+++ b/apps/vite-native-ts-skyline/package.json
@@ -23,6 +23,9 @@
     "build-npm": "weapp-vite build-npm",
     "postinstall": "weapp-tw patch"
   },
+  "dependencies": {
+    "wevu": "^1.0.1"
+  },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.9.0",
     "@iconify-json/mdi": "^1.2.3",
