--- a/apps/vite-native-ts-skyline/miniprogram/app.json
+++ b/apps/vite-native-ts-skyline/miniprogram/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/cart/index"
+    "pages/index/index"
+    // "pages/cart/index"
   ],
   "window": {
     "navigationBarTextStyle": "black",
