--- a/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -2,6 +2,9 @@
   "name": "uni-app-x-hbuilderx-tailwindcss4",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "extract": "tw-patch extract"
   },
