--- a/demo/native-ts/package.json
+++ b/demo/native-ts/package.json
@@ -2,6 +2,9 @@
   "name": "@weapp-tailwindcss-demo/native-ts",
   "private": true,
   "version": "1.0.0",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "description": "",
   "scripts": {
     "build": "weapp-vite build",
