--- a/packages-runtime/merge/package.json
+++ b/packages-runtime/merge/package.json
@@ -43,6 +43,9 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "tsdown --watch --sourcemap",
     "build": "tsdown",
