--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -21,6 +21,9 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "tsup --watch --sourcemap",
     "build": "tsup",
