--- a/packages/weapp-style-injector/package.json
+++ b/packages/weapp-style-injector/package.json
@@ -67,6 +67,9 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "stub": "unbuild --stub",
     "dev": "tsup --watch --sourcemap",
