--- a/apps/tailwindcss-weapp/package.json
+++ b/apps/tailwindcss-weapp/package.json
@@ -11,6 +11,9 @@
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "bootstrap": "pnpm i --ignore-workspace",
     "upgrade": "pnpm up -Li --ignore-workspace",
@@ -96,7 +99,7 @@
     "@vue/runtime-core": "^3.5.26",
     "autoprefixer": "^10.4.21",
     "indent-string": "^5.0.0",
-    "miniprogram-api-typings": "^4.1.3",
+    "miniprogram-api-typings": "^5.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.8.0",
     "prettier-plugin-tailwindcss": "^0.7.2",
@@ -105,8 +108,8 @@
     "tailwindcss": "^3.4.19",
     "unplugin-auto-import": "^19.1.1",
     "vite": "5.2.8",
-    "vue-eslint-parser": "^9.4.3",
-    "weapp-ide-cli": "^4.1.2",
+    "vue-eslint-parser": "^10.2.0",
+    "weapp-ide-cli": "^5.0.0",
     "weapp-tailwindcss": "workspace:*"
   }
 }
