--- a/apps/vite-native-ts/package.json
+++ b/apps/vite-native-ts/package.json
@@ -15,6 +15,9 @@
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
   "keywords": [],
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "weapp-vite dev",
     "dev:open": "weapp-vite dev -o",
