--- a/apps/weapp-wechat-zhihu/package.json
+++ b/apps/weapp-wechat-zhihu/package.json
@@ -15,6 +15,9 @@
   },
   "keywords": [],
   "main": "index.js",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "weapp-vite dev",
     "build": "weapp-vite build",
