--- a/benchmark/app/package.json
+++ b/benchmark/app/package.json
@@ -12,6 +12,9 @@
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "pnpm run build:data && vite",
     "build": "pnpm run build:data && vue-tsc && vite build",
