--- a/benchmark/tailwindcss4/package.json
+++ b/benchmark/tailwindcss4/package.json
@@ -3,6 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "bench": "vitest bench --config ./vitest.config.mts"
   },
