--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@weapp-tailwindcss-demo/mpx-app",
   "version": "0.1.0",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "private": true,
   "author": "ice breaker <1324318532@qq.com>",
   "repository": {
@@ -45,13 +48,13 @@
     "@mpxjs/babel-plugin-inject-page-events": "^2.9.5",
     "@mpxjs/eslint-config-ts": "^1.0.5",
     "@mpxjs/miniprogram-simulate": "1.4.20",
-    "@mpxjs/mpx-cli-service": "2.2.11",
+    "@mpxjs/mpx-cli-service": "2.2.12",
     "@mpxjs/mpx-jest": "^0.0.32",
     "@mpxjs/size-report": "^2.9.42",
-    "@mpxjs/vue-cli-plugin-mpx": "2.2.11",
-    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "2.2.11",
-    "@mpxjs/vue-cli-plugin-mpx-typescript": "2.2.11",
-    "@mpxjs/vue-cli-plugin-mpx-unit-test": "2.2.11",
+    "@mpxjs/vue-cli-plugin-mpx": "2.2.12",
+    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "2.2.12",
+    "@mpxjs/vue-cli-plugin-mpx-typescript": "2.2.12",
+    "@mpxjs/vue-cli-plugin-mpx-unit-test": "2.2.12",
     "@mpxjs/webpack-plugin": "2.10.17",
     "@vue/cli-service": "~5.0.0",
     "@weapp-tailwindcss/merge-v3": "workspace:*",
