--- a/demo/native/package.json
+++ b/demo/native/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@weapp-tailwindcss-demo/native",
   "version": "1.0.0",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
