--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@weapp-tailwindcss-demo/rax-app",
   "version": "0.1.0",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "private": true,
   "description": "Rax 无线跨端应用工程，使用 TypeScript。",
   "author": "ice breaker <1324318532@qq.com>",
