--- a/demo/taro-vite-tailwindcss-v4/package.json
+++ b/demo/taro-vite-tailwindcss-v4/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@weapp-tailwindcss-demo/taro-vite-tailwindcss-v4",
   "version": "1.0.0",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "private": true,
   "description": "",
   "templateInfo": {
