--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@weapp-tailwindcss-demo/uni-app-webpack5",
   "version": "0.1.0",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "private": true,
   "scripts": {
     "serve": "npm run dev:h5",
