--- a/e2e/package.json
+++ b/e2e/package.json
@@ -3,6 +3,9 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {},
   "dependencies": {
     "@tailwindcss-mangle/config": "^6.1.0",
