--- a/packages-runtime/variants-v3/package.json
+++ b/packages-runtime/variants-v3/package.json
@@ -34,6 +34,9 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "tsdown -w",
     "build": "tsdown",
