--- a/packages/debug-uni-app-x/package.json
+++ b/packages/debug-uni-app-x/package.json
@@ -25,6 +25,9 @@
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "unbuild --stub",
     "build:watch": "unbuild --watch --sourcemap",
