--- a/packages/minify-preserve/package.json
+++ b/packages/minify-preserve/package.json
@@ -14,6 +14,9 @@
     "README.md",
     "examples"
   ],
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "test": "vitest run",
     "test:dev": "vitest",
