--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -38,6 +38,9 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "tsup --watch --sourcemap",
     "build": "tsup",
@@ -53,14 +56,14 @@
     "@weapp-tailwindcss/postcss-calc": "^1.0.0",
     "@weapp-tailwindcss/shared": "workspace:*",
     "postcss": "~8.5.6",
-    "postcss-preset-env": "^10.6.1",
+    "postcss-preset-env": "^11.1.1",
     "postcss-pxtrans": "^1.0.0",
     "postcss-rem-to-responsive-pixel": "catalog:postcssRem610",
     "postcss-selector-parser": "~7.1.1",
     "postcss-value-parser": "^4.2.0"
   },
   "devDependencies": {
-    "@csstools/postcss-is-pseudo-class": "^5.0.3",
+    "@csstools/postcss-is-pseudo-class": "^6.0.0",
     "postcss-calc": "^10.1.1",
     "postcss-custom-properties": "^14.0.6"
   }
