--- a/packages/tailwindcss-core-plugins-extractor/package.json
+++ b/packages/tailwindcss-core-plugins-extractor/package.json
@@ -25,6 +25,9 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "extract": "node scripts/main.js",
     "build": "tsup",
