--- a/packages/weapp-tw/package.json
+++ b/packages/weapp-tw/package.json
@@ -34,6 +34,9 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "tsdown -w",
     "build": "tsdown",
