--- a/website/package.json
+++ b/website/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
   "engines": {
-    "node": ">=16.14"
+    "node": "^20.19.0 || >=22.12.0"
   },
   "scripts": {
     "docusaurus": "cross-env NO_UPDATE_NOTIFIER=1 docusaurus",
