--- a/demo/uni-app-webpack-tailwindcss-v4/package.json
+++ b/demo/uni-app-webpack-tailwindcss-v4/package.json
@@ -74,10 +74,10 @@
     "@dcloudio/uni-quickapp-webview": "2.0.2-4080520251106001",
     "@dcloudio/uni-stacktracey": "2.0.2-4080520251106001",
     "@dcloudio/uni-stat": "2.0.2-4080520251106001",
-    "@vue/shared": "^3.5.26",
+    "@vue/shared": "^3.5.27",
     "core-js": "^3.47.0",
     "flyio": "^0.6.14",
-    "vue": ">= 2.6.14 < 2.7",
+    "vue": "^2.6.14",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vuex": "^3.6.2"
