feat: 修复类型声明与 VariantProps 导出

--- a/packages-runtime/tailwind-variant-v3/package.json
+++ b/packages-runtime/tailwind-variant-v3/package.json
@@ -42,6 +42,7 @@
     "build": "tsdown",
     "test": "vitest run",
     "test:dev": "vitest",
+    "tsd": "tsd",
     "bench": "vitest bench test/tv.bench.ts",
     "release": "pnpm publish",
     "lint": "eslint .",
