--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "test:core": "vitest run --coverage.enabled --coverage.all=false --project=weapp-tailwindcss",
     "test:dev": "vitest",
     "test:ui": "vitest --ui",
+    "tsd": "turbo run tsd",
+    "tsd:runtime": "turbo run tsd --filter=./packages-runtime/cva --filter=./packages-runtime/tailwind-variant-v3 --filter=./packages-runtime/variants --filter=./packages-runtime/variants-v3",
     "e2e": "vitest run -c ./e2e/vitest.e2e.config.ts",
     "e2e:dev": "vitest -c ./e2e/vitest.e2e.config.ts",
     "e2e:u": "vitest run -u -c ./e2e/vitest.e2e.config.ts",
