feat: 提取常用字符串/数组工具到 shared，并在相关包中复用

--- a/packages/weapp-style-injector/package.json
+++ b/packages/weapp-style-injector/package.json
@@ -81,6 +81,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@weapp-tailwindcss/shared": "workspace:*",
     "micromatch": "^4.0.8"
   },
   "publishConfig": {}
