--- a/packages-runtime/merge-v3/package.json
+++ b/packages-runtime/merge-v3/package.json
@@ -48,6 +48,7 @@
     "build": "tsdown",
     "test": "vitest run",
     "test:dev": "vitest",
+    "tsd": "tsd",
     "release": "pnpm publish",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
