chore(deps): bump tailwind-merge 2.6.0 -> 2.6.1

--- a/packages-runtime/tailwind-variant-v3/package.json
+++ b/packages-runtime/tailwind-variant-v3/package.json
@@ -57,8 +57,7 @@
       "optional": true
     }
   },
-  "dependencies": {},
   "devDependencies": {
-    "tailwind-merge": ">=2 <3"
+    "tailwind-merge": "^2.6.1"
   }
 }
