--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -57,9 +57,10 @@
     "@weapp-tailwindcss/shared": "workspace:*",
     "postcss": "~8.5.6",
     "postcss-preset-env": "^10.6.1",
-    "postcss-pxtrans": "^1.0.0",
+    "postcss-pxtrans": "^1.0.1",
     "postcss-rem-to-responsive-pixel": "catalog:postcssRem610",
     "postcss-selector-parser": "~7.1.1",
+    "postcss-units-to-px": "^0.1.0",
     "postcss-value-parser": "^4.2.0"
   },
   "devDependencies": {
